(rule
 (action
  (copy ../../src/treiber_stack.ml treiber_stack.ml))
 (package saturn))

(test
 (package saturn)
 (name treiber_stack_dscheck)
 (libraries atomic dscheck alcotest backoff multicore-magic)
 (build_if
  (and
   (>= %{ocaml_version} 5)
   (not
    (and
     (= %{arch_sixtyfour} false)
     (= %{architecture} arm)))))
 (modules treiber_stack treiber_stack_dscheck))

(test
 (package saturn)
 (name qcheck_treiber_stack)
 (libraries
  saturn
  barrier
  qcheck
  qcheck-core
  qcheck-alcotest
  domain_shims
  alcotest)
 (modules qcheck_treiber_stack))

(test
 (package saturn)
 (name stm_treiber_stack)
 (modules stm_treiber_stack)
 (libraries saturn qcheck-core qcheck-stm.stm stm_run))
