(rule
 (action
  (copy ../../src_lockfree/ArrayExtra.ml ArrayExtra.ml))
 (package saturn_lockfree))

(rule
 (action
  (copy ../../src_lockfree/ws_deque.ml ws_deque.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name ws_deque_dscheck)
 (libraries atomic dscheck alcotest backoff multicore-magic-dscheck)
 (build_if
  (>= %{ocaml_version} 5))
 (modules ArrayExtra ws_deque ws_deque_dscheck)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (package saturn_lockfree)
 (name test_ws_deque)
 (libraries saturn_lockfree domain_shims)
 (modules test_ws_deque))

(test
 (package saturn_lockfree)
 (name qcheck_ws_deque)
 (libraries
  barrier
  saturn_lockfree
  qcheck
  qcheck-core
  qcheck-alcotest
  domain_shims
  alcotest)
 (enabled_if
  (not
   (and
    (= %{arch_sixtyfour} false)
    (= %{architecture} arm))))
 (modules qcheck_ws_deque))

(test
 (package saturn_lockfree)
 (name stm_ws_deque)
 (modules stm_ws_deque)
 (libraries
  saturn_lockfree
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run)
 (enabled_if
  (= %{arch_sixtyfour} true)))
